# shell

./: Cargo.toml  build.rs  flake.nix
fonts/: icons.toml
src/: audio.rs  background.rs  bar.rs  cli.rs  debug.rs  icon.rs  main.rs  shell.rs  wifi.rs  workspace.rs
src/bar/: audio.rs  battery.rs  wifi.rs  workspace_overview.rs
