[package]
name = "shell"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
hyprland = { version = "0.4.0-beta.3", default-features = false, features = ["data", "listener", "tokio"] }
iced = { git = "https://github.com/pop-os/iced", version = "0.14.0", default-features = false, features = ["cctk", "image", "tokio", "wgpu", "winit"] }
pipewire = "0.9.2"
smithay-client-toolkit = "0.20.0"
tokio = "1.51.0"
tokio-stream = "0.1.18"
zbus = { version = "5.14.0", default-features = false, features = ["tokio"] }

[build-dependencies]
iced_lucide = "0.1.0"

[features]
debug = ["iced/debug"]
